cart and other modifications

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,7 +15,8 @@
   {{ 'aos.css' | asset_url | stylesheet_tag }}
   {% comment %} {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }} {% endcomment %}
 
-
+  {% comment %} box icon {% endcomment %}
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
 </head>
