--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -27,7 +27,7 @@
 
   /* section settings */
   .{{ section.id }} {
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding: {{ section.settings.footer_padding_y }}px 0;
     display: flex;
@@ -122,7 +122,7 @@
         "step": 1,
         "unit": "vw",
         "label": "Footer Width",
-        "default": 100
+        "default": 60
       },
       {
         "type": "range",
