--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -1,82 +1,243 @@
-{% if cart.item_count > 0 %}
-  <form action="/cart" method="post" novalidate>
-    <div class="cart-container">
-      <div>
+
+<div class="{{ section.id }}">
+  {% if cart.item_count > 0 %}
+    <form action="/cart" method="post" novalidate>
+      <div class="shopping-cart">
+  
         <h2>Shopping Cart</h2>
-      </div>
-      <div class="my-5 row">
-        <form action="/cart" method="POST" class="row" novalidate>
-          <div class="col-12 col-md-8">
-            <div class="card shadow">
-              <div class="card-body">
-                <table class="table table-borderless">
-                  <thead>
-                    <th colspan="2">Product</th>
-                    <th>Price</th>
-                    <th>Qty</th>
-                    <th>Total</th>
-                  </thead>
-                  <tbody>
-                    {% for item in cart.items %}
-                      <tr>
-                        <td>
-                          <a href="{{ item.url | within: collections.all }}">
-                            <img src="{{ item | img_url: 'medium' }}" alt="{{ item.title | escape }}">
-                          </a>
-                        </td>
-                        <td>
-                          <a href="{{ item.url }}">{{ item.product.title }}</a>
-                          <p class="small">{{ item.variant.title }}</p>
-                          <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0">Remove</a>
-                        </td>
-                        <td>{{ item.price | money }}</td>
-                        <td>
-                          <input
-                            type="number"
-                            name="updates[]"
-                            id="updates_{{ item.key }}"
-                            value="{{ item.quantity }}"
-                            min="0"
-                          >
-                        </td>
-                        <td>
-                          {% if item.original_line_price != item.line_price -%}
-                            {{- item.original_line_price | money -}}
-                          {%- endif %}
-                          {{ item.line_price | money }}
-                          {% for discount in item.discounts -%}
-                            {{- discount.title -}}
-                          {%- endfor %}
-                        </td>
-                      </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <div>
-                  <p>Sub Total : {{ cart.total_price | money }}</p>
-                  <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary" name="update">Update</button>
-                    <button type="submit" class="btn btn-primary" name="checkout">Checkout</button>
-                  </div>
+        <form action="/cart" method="POST" novalidate>
+  
+  
+          {% for item in cart.items %}
+            <div class="grid-container-{{ section.id }}">
+                <div class="grid-item-1 grid-item">
+                    <a href="{{ item.url | within: collections.all }}">
+                      <img src="{{ item | img_url: 'medium' }}" alt="{{ item.title | escape }}">
+                    </a>
                 </div>
-              </div>
+  
+                <div class="grid-item-2 grid-item">
+                  <a href="{{ item.url }}" class="product-title">{{ item.product.title }}</a>
+                  <p class="small"> Variant: {{ item.variant.title }}</p>
+                  <p>{{ item.price | money }}</p>
+                </div>
+  
+                <div class="grid-item-3 grid-item">
+  
+                </div>
+  
+                <div class="grid-item-4 grid-item">
+                  <input type="number" name="updates[]" id="updates_{{ item.key }}" value="{{ item.quantity }}" min="0" class="qty" >
+                </div>
+  
+                <div class="grid-item-5 grid-item">
+                  {% if item.original_line_price != item.line_price -%}
+                    {{- item.original_line_price | money -}}
+                  {%- endif %}
+                  {{ item.line_price | money }}
+                  {% for discount in item.discounts -%}
+                    {{- discount.title -}}
+                  {%- endfor %}
+                </div>
+  
+                <div class="grid-item-6 grid-item">
+                  <a href="/cart/change?line={{ forloop.index }}&amp;quantity=0"><i class='bx bx-trash'></i></a>
+                </div>
+  
+  
+  
             </div>
+          {% endfor %}
+
+          <div class="proceed-to-checkout">
+            <p class="total">Estimated Total : {{ cart.total_price | money }}</p>
+            <p>Taxes, discounts and shipping calculated at checkout</p>
+            <button type="submit" name="update">Update</button>
+            <button type="submit" name="checkout">Proceed to checkout</button>
           </div>
+  
         </form>
       </div>
+    </form>
+  {% else %}
+    <div class="empty-cart">
+      <h2 class="text-center">Your cart is empty</h2>
+      <a href="/collections/all">Continue shopping</a>
     </div>
-  </form>
-{% else %}
-  <div class="container">
-    <div class="row">
-      <h2 class="text-center">Cart</h2>
-      <p>Cart is empty</p>
-    </div>
-  </div>
-{% endif %}
+  {% endif %}
+</div>
+
+
+{% style %}
+  .{{ section.id }} {
+    width: 100%;
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px 0;
+  }
+
+  /* section width */
+  .shopping-cart {
+    width: 60vw;
+    margin: 0 auto;
+  }
+
+  /* title */
+  .{{ section.id }} h2 {
+    padding: 20px 0;
+    font-size: 24px;
+    font-weight: 400;
+  }
+
+  .{{ section.id }} .product-title {
+    font-size: 18px;
+    transition: all .15s ease-in-out;
+  }
+  .{{ section.id }} .product-title:hover {
+    transform: scale(1.03);
+    color: #000;
+  }
+
+  .{{ section.id }} p {
+    font-size: 14px;
+    color: #353a3d;
+    font-weight: 400;
+    /* letter-spacing: 1px; */
+  }
+
+  .{{ section.id }} input {
+    background: #f5f5f5;
+    border: 1px solid #ccc;
+    padding: 8px;
+    width: 100px;
+    color: #353a3d;
+  }
+
+  .{{ section.id }} .bx-trash {
+    font-size: 18px;
+    transition: all .15s ease-in-out;
+  }
+  .{{ section.id }} .bx-trash:hover {
+    transform: scale(1.03);
+    color: #000;
+  }
+
+  /* product image */
+  .grid-item img {
+    width: 150px;
+  }
+
+  /* product title */
+  .grid-container-{{ section.id }} a {;
+    color: #353a3d;
+  }
+
+  /* proceed to checkout */
+  .{{ section.id }} .proceed-to-checkout {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .proceed-to-checkout .total {
+    font-size: 18px;
+    font-weight: 600;
+    /* letter-spacing: normal; */
+    padding: 8px 0;
+  }
+
+  .proceed-to-checkout button {
+    padding: 16px;
+    width: 250px;
+    margin: 8px 0;
+    font-size: 16px;
+    color: #fff;
+    background-color: #353a3d;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+  }
+  .proceed-to-checkout button:hover {
+    background-color: #000;
+    transform: scale(1.01);
+  }
+
+  .{{ section.id }} .empty-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60vw;
+    min-height: 70vh;
+    margin: 0 auto;
+  }
+
+  .empty-cart  h2 {
+    font-size: 32px;
+    color: #353a3d;
+  }
+
+  .empty-cart  a {
+    display: block;
+    padding: 16px;
+    margin: 8px 0;
+    font-size: 16px;
+    color: #fff;
+    background-color: #353a3d;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+  }
+  .empty-cart  a:hover {
+    background-color: #000;
+    transform: scale(1.01);
+  }
+
+  /* grid container */
+  .grid-container-{{ section.id }} {
+    display: grid;
+    /* grid-gap: 8px; */
+    padding-bottom: 8px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-template-areas: 
+    "picture details price qty total remove";
+  }
+
+  /* common grid items */
+  .grid-item {
+    /* background: #f5f5f5; */
+    border-bottom: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .grid-item-2,
+  .grid-item-6 {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  /* grid areas */
+  .grid-item-1 {
+    grid-area: picture;
+  }
+  .grid-item-2 {
+    grid-area: details;
+  }
+  .grid-item-3 {
+    grid-area: price;
+  }
+  .grid-item-4 {
+    grid-area: qty;
+  }
+  .grid-item-5 {
+    grid-area: total;
+  }
+  .grid-item-6 {
+    grid-area: remove;
+  }
+
+
+{% endstyle %}
