--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -1,35 +1,121 @@
 <!-- /templates/customers/login.liquid -->
-<div class="container py-5 my-5">
-  <div class="login-form">
-    <h2>Login</h2>
-    {% form 'customer_login' %}
-    
-      {% comment %} error {% endcomment %}
-      {% render 'form-error', form: form %}
-    
-      <label for="customer_email">Email Address</label>
-      <input type="email" name="customer[email]" class="form-control" />
-    
-      <label for="customer_password">Password</label>
-      <input type="password" name="customer[password]" class="form-control" />
-    
-      <input type="submit" value="Sign In" class="btn btn-primary w-100" />
-    
-    {% endform %}
-  </div>
-  
-  <div class="forgot-form">
-    <h2>Forgot Password</h2>
-    {% form 'recover_customer_password' %}
-    
-      {{ form.errors | default_errors }}
-    
-      <label for="customer_email">Email Address</label>
-      <input type="email" name="email" class="form-control" />
-    
-      <input type="submit" value="Submit" class="btn btn-secondary w-100" />
-    
-    {% endform %}
-  </div>
+<div class="{{ section.id }}">
+  <div class="customer-form">
+    <div class="form-container">
 
+      <div class="login-form">
+        <h2>Login</h2>
+        {% form 'customer_login' %}
+          {% comment %} error {% endcomment %}
+          {% render 'form-error', form: form %}
+          <label for="customer_email">Email Address</label>
+          <input type="email" name="customer[email]"/>
+          <label for="customer_password">Password</label>
+          <input type="password" name="customer[password]"/>
+          <input type="submit" value="Sign In" class="btn"/>
+          <li>
+            <a href="{{ routes.account_register_url }}" class="btn">Register</i></a>
+          </li>
+        {% endform %}
+      </div>
+            
+      <div class="forgot-form">
+        <h2>Forgot Password</h2>
+        {% form 'recover_customer_password' %}
+          {{ form.errors | default_errors }}
+          <label for="customer_email">Email Address</label>
+          <input type="email" name="email"/>
+          <input type="submit" value="Submit" class="btn"/>
+        {% endform %}
+      </div>
+
+    </div>
+  </div>
 </div>
+
+{% style %}
+  .{{ section.id }} {
+    width: 100%;
+  }
+  
+  .customer-form {
+    width: 60vw;
+    min-height: 81vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .form-container {
+    width: 300px;
+    box-shadow: 0 0 8px #ccc;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+
+  .form-container a {
+    display: block;
+    text-align: center;
+  }
+
+  .form-container .btn {
+    width: 100%;
+    color: #fff;
+    background-color: #353a3d;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+  }
+
+  .form-container .btn:hover {
+    background: #000;
+    transform: scale(1.01);
+  }
+
+  .login-form input,
+  .forgot-form input {
+    display: block;
+  }
+
+  .form-container h2 {
+    font-size: 24px;
+    font-weight: 400;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+
+  .form-container input,
+  .form-container label {
+    color: #353a3d;
+    font-size: 14px;
+  }
+
+  .form-container input,
+  .form-container a {
+    width: 100%;
+    margin-bottom: 8px;
+    padding: 8px;
+  }
+
+  .form-container input {
+    border: 1px solid #ccc;
+  }
+
+  .form-container input:last-child {
+    margin-bottom: 20px;
+  }
+
+  .login-form {
+    margin-bottom: 20px;
+  }
+
+  .login-form li {
+    list-style: none;
+  }
+{% endstyle %}
