--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -76,6 +76,7 @@
     background: {{ section.settings.section_background_color }};
     width: 100%;
     max-width: 1920px;
+    margin: 0 auto;
   }
 
   .wrapper {
