--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -36,6 +36,8 @@ body {
   border: 0;
   padding: 0;
   
-  min-height: 100vh;
-  /* overflow: hidden; */
+  /* min-height: 100vh; */
+  overflow-x: hidden;
+  /* max-width: 1920px; */
+  /* margin: 0 auto; */
 }
