--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -215,13 +215,19 @@
 
   @media screen and (max-width: 600px) {
     .main-page-content-{{ section.id }} {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+    .main-page-content-{{ section.id }} {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       margin: 0 auto;
     }
-
   }
 
 {% endstyle %}
