--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -214,6 +214,52 @@
     right: 10px;
   }
   /* carousel end */
+
+  @media screen and (max-width: 1260px) {
+    .page-container-{{ section.id }} {
+      width: 90vw;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .content-container .form-select,
+    .content-container .form-input,
+    .content-container .add-to-cart {
+      width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .page-container-{{ section.id }} {
+      display: grid;
+      grid-template-rows: 500px auto;
+    }
+
+    .page-container-{{ section.id }} .image-container, {
+      display: block;
+      /* height: 500px; */
+    }
+
+    .page-container-{{ section.id }} .content-container {
+      padding: 30px 0;
+    }
+
+    .page-container-{{ section.id }} .image-container,
+    .page-container-{{ section.id }} .content-container {
+      width: 100%;
+    }
+
+    .page-container-{{ section.id }} h2 {
+      padding-bottom: 10px;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+    .page-container-{{ section.id }} {
+      display: grid;
+      grid-template-rows: 300px auto;
+    }
+  }
 {% endstyle %}
 
 
