tweaking for improvements

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -310,7 +310,7 @@
       "max": 10,
       "step": 1,
       "unit": "pcs",
-      "label": "Cards per Row",
+      "label": "Card per Row",
       "default": 4
     },
     {
@@ -320,7 +320,7 @@
       "max": 50,
       "step": 1,
       "unit": "px",
-      "label": "Cards Inner Padding",
+      "label": "Card Inner Padding",
       "default": 16
     },
     {
@@ -330,7 +330,7 @@
       "max": 100,
       "step": 1,
       "unit": "px",
-      "label": "Cards Gap",
+      "label": "Card Gap",
       "default": 24
     },
     {
@@ -360,7 +360,7 @@
       "max": 50,
       "step": 1,
       "unit": "px",
-      "label": "Cards Shadow Spread",
+      "label": "Card Shadow Spread",
       "default": 8
     },
     {
@@ -370,7 +370,7 @@
       "max": 50,
       "step": 1,
       "unit": "px",
-      "label": "Cards Shadow Position Y",
+      "label": "Card Shadow Position Y",
       "default": 0
     },
     {
@@ -380,7 +380,7 @@
       "max": 50,
       "step": 1,
       "unit": "px",
-      "label": "Cards Shadow Position X",
+      "label": "Card Shadow Position X",
       "default": 0
     },
     {
