--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -146,6 +146,12 @@
   .section-container-{{ section.id }} {
       min-width: 90vw;
     }
+
+    section .section-container-{{ section.id }} {
+    padding-left: 20px;
+    padding-right: 20px;
+
+  }
   }
 
   @media screen and (max-width: 768px) {
