--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -171,6 +171,37 @@
       }
     {% endif %}
   {% endfor %}
+
+  @media screen and (max-width: 768px) {
+    .banner-content-{{ section.id }} .content-title {
+      font-size: 96px;
+      text-align: center;
+    }
+
+    .banner-content-{{ section.id }} .content-description {
+      font-size: 40px;
+      text-align: center;
+    }
+
+    .banner-content-{{ section.id }} .button {
+      font-size: 16px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .banner-content-{{ section.id }} .content-title {
+      font-size: 48px;
+    }
+
+    .banner-content-{{ section.id }} .content-description {
+      font-size: 24px;
+    }
+
+    .banner-content-{{ section.id }} .button {
+      font-size: 12px;
+    }
+  }
+
 {% endstyle %}
 
 {% schema %}
